BUG:CSS: should be no horizontal scroll bar in this right sidebar. I think too many nested divs it should be allowed to goto the edge of the page.

--- a/app/stylesheets/forms/_email.scss
+++ b/app/stylesheets/forms/_email.scss
@@ -220,7 +220,7 @@
 
   .email-history {
     width: calc(100% - 330px);
-    margin-right: 20px;
+    margin-right: 30px;
     display: inline-block;
   }
 }
@@ -781,7 +781,7 @@
 
     .form {
       width: 268px;
-      padding-left: 12px;
+      padding-left: 0px;
       margin-right: 20px;
 
       .sidebar-panel-content {
